# application-starter-platform

./: .env.example  .gitignore  LICENSE  README.md  START_APPLICATION.cmd  application_configurator_gui.py  application_manifest.yaml  application_starter_platform.yaml  developer_setup.py  developer_setup_gui.py  export_openapi.py  installer.iss  pyproject.toml  run.py
app/: main.py
app/api/: auth.py  health.py
app/auth/: dependencies.py  jwt_tokens.py  one_time_tokens.py  passwords.py
app/core/: manifest.py  paths.py  settings.py
app/db/: database.py  engine_factory.py  migration_runner.py
app/domain/: __init__.py  api.py  schemas.py
app/models/: __init__.py  account_token.py  user.py
app/schemas/: __init__.py  auth.py
frontend/: account.html  forgot-password.html  index.html  login.html  register.html  reset-password.html  verify-email.html
migrations/: env.py
tests/: test_account_tokens.py  test_accounts.py  test_auth_me_api.py  test_database.py  test_database_providers.py  test_database_runtime.py  test_developer_setup.py  test_developer_setup_gui.py  test_domain_api.py  test_email_confirmation_api.py  test_email_sender.py  test_forgot_password_api.py  test_health.py  test_jwt_tokens.py  test_login_api.py  test_manifest.py  test_mariadb_provider.py  test_migrations.py  test_mysql_provider.py  test_one_time_tokens.py  test_oracle_provider.py  test_password_reset_api.py  test_password_reset_login_flow.py  test_passwords.py  test_paths.py  test_postgresql_provider.py  test_register_api.py  test_settings.py  test_sqlserver_provider.py
(+21 files in other folders)
