[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "application-starter-platform"
version = "0.1.0"
description = "Reusable FastAPI authentication and account starter."
requires-python = ">=3.14,<3.15"

dependencies = [
    "alembic==1.18.5",
    "email-validator==2.3.0",
    "fastapi==0.139.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "PyJWT==2.13.0",
    "pwdlib[argon2]==0.3.0",
    "python-dotenv==1.2.2",
    "SQLAlchemy==2.0.51",
    # DATABASE_PROVIDER_DRIVER_DEPENDENCY
    "uvicorn[standard]==0.51.0",
]


[project.optional-dependencies]
dev = [
    "httpx2==2.7.0",
    "pytest==9.1.1",
    "PyYAML==6.0.3",
    "pyinstaller==6.21.0",
    
]


[tool.setuptools.packages.find]
include = ["app*"]


[tool.pytest.ini_options]
testpaths = ["tests"]